# guestbook

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.toml  flake.nix  module.nix
src/: config.rs  entries.rs  main.rs  render.rs  telegram.rs  web.rs
templates/: default.css  default.html  success.html
