[package]
name = "guestbook"
version = "0.2.2"
edition = "2021"
description = "A configurable web guestbook made to be easy to use, with entries in plain text files, an optional drawing canvas, honeypots and captchas to deter spam, and moderation via Telegram bot."
license = "MIT"
repository = "https://git.ily.rs/lew/guestbook"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
urlencoding = "2"
