[package]
name = "guestbook"
version = "0.2.3"
edition = "2021"
description = "A self-hosted guestbook page to let visitors to your site leave behind written messages, drawings, and voice notes, with spam-prevention and moderation via Telegram bot."
license = "MIT"
repository = "https://git.ily.rs/lew/guestbook"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
urlencoding = "2"
