[package]
name = "guestbook"
version = "0.2.9"
edition = "2021"
description = "A configurable, self-hosted guestbook for the web, allowing visitors to leave behind messages, drawings, and voice notes, with spam-prevention and moderation via Telegram bot."
license = "MIT"
repository = "https://git.ily.rs/lew/guestbook"

[features]
default = ["telegram"]
telegram = ["dep:teloxide"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
teloxide = { version = "0.13", features = ["macros"], optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dotenvy = "0.15"
rand = "0.9"
chrono = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev.package."*"]
opt-level = 1

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
urlencoding = "2"
